# SK---Tasks

bankApp/: account.py  account_test.py  atm_machine.py  bank.py  bank_test.py
diaryApp/: diaries.py  diaries_test.py  diary.py  diary_test.py  entry.py  main_application.py
eStore/: address.py  admin.py  billing_information.py  card_tye.py  credit_card_information.py  customer.py  items.py  product.py  product_category.py  seller.py  shopping_cart.py  user.py
expenseTracker/: data.sqlite  main.py  pyproject.toml
expenseTracker/app/exceptions/: custom_exceptions.py
expenseTracker/app/models/: expense.py  user.py
expenseTracker/app/repositories/: expense_repository.py  user_repository.py
expenseTracker/app/routers/: auth_router.py  expense_tracker_router.py
expenseTracker/app/schemas/: expense_schema.py  user_schema.py
expenseTracker/app/services/: auth_service.py  expense_tracker_service.py
managementSystem/: course.py  management_system.py  management_system_test.py  student.py
studentCourseManagementSystem/: main.py
studentCourseManagementSystem/database/: connection.py
studentCourseManagementSystem/exceptions/: custom_exceptions.py  user_exceptions.py
studentCourseManagementSystem/models/: course.py  enrollment.py  enums.py  user.py
studentCourseManagementSystem/repositories/: course_repository.py  enrollment_repository.py  (+1 more)
studentManagementSystem/: course.py  management_system_test.py  student.py  student_management_system.py
televisionSystem/: television.py  television_test.py
todoapp/: models.py  schemas.py  services.py
(+8 files in other folders)
